# echokit_box

./: .env  .gitignore  Cargo.toml  Makefile  README.md  buildmodel.sh  espflash.toml  package.sh  partitions.csv  sdkconfig  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: package.yml  release.yml  rust_ci.yml
components/78_opus/: bindgen.h
components/esp_sr/: bindgen.h
components/hal_driver/: lcd.c  lcd.h
setup/: index.html  index_zh.html
src/: activation.rs  app.rs  audio.rs  bt.rs  hal.rs  main.rs  network.rs  protocol.rs  report.rs  sntp.rs  ui.rs  ws.rs
src/boards/: atom_box.rs  base.rs  cube.rs  cube2.rs  mod.rs
src/captive_portal/: handlers.rs  html.rs  mod.rs  server.rs
src/codec/: opus.rs
src/peripheral/: mod.rs
src/peripheral/exio/: emakefun_exio.rs  mod.rs
src/peripheral/mfrc522/: consts.rs  drivers.rs  mifare.rs  mod.rs  pcd.rs  picc.rs
