[package]
name = "echokit"
version = "0.3.0"
authors = ["csh <458761603@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "echokit"
# do not use the built in cargo test harness => resolve rust-analyzer errors
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[features]
default = ["boards"]

experimental = ["esp-idf-svc/experimental"]

boards = ["voice_interrupt", "base_ui"]
_no_default = []
box = ["_no_default", "voice_interrupt"]
cube = ["_no_default", "voice_interrupt", "base_ui"]
cube2 = ["_no_default", "voice_interrupt", "base_ui"]
nfc_cube2 = ["cube2", "mfrc522", "exio"]

mfrc522 = ["i2c", "dep:ndef", "extra_server"]
exio = ["i2c"]

extra_server = []
i2c = []

voice_interrupt = []
base_ui = []

[dependencies]
log = "0.4"
anyhow = "1.0"

esp-idf-svc = "0.51.0"
# wav_io = "0.1.15"

rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

esp32-nimble = "0.11.1"

# UI libraries
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "gif",
    "webp",
] }


futures-util = { version = "0.3.31", features = ["sink"] }
# futures-sink = "0.3.31"

tokio = { version = "1.43.0", features = [
    "net",
    "rt",
    "time",
    "io-std",
    "io-util",
    "macros",
] }
tokio-websockets = { version = "0.13", features = [
    "client",
    "fastrand",
    "sha1_smol",
] }
http = "1.3"
bytes = "1.10.0"

qrcode = { version = "0.14.1", default-features = false, features = [] }
ndef = { version = "0.4.0", features = ["alloc"], optional = true }

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-sr", version = "^2.0.0" }
bindings_header = "components/esp_sr/bindgen.h"
bindings_module = "esp_sr"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/hal_driver"]
bindings_header = "components/hal_driver/wrapper.h"
bindings_module = "hal_driver"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "78/esp-opus", version = "^1.0.5" }
bindings_header = "components/78_opus/bindgen.h"
bindings_module = "xz_78_opus"
